tests/baselines/reference/umdDependencyCommentName1.errors.txt
tests/cases/compiler/umdDependencyCommentName1.ts(3,21): error TS2307: Cannot find module 'm2'.


==== tests/cases/compiler/umdDependencyCommentName1.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2'.
    m1.f();
    